namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: magento
  labels:
    name: magento
    app: magento2
